# TEL211

./: README.md  test.py
assignment_1/task_1_1/: task_1_1.sh
assignment_1/task_1_2/: task_1_2.sh
assignment_1/task_2_1/: task_2_1.sh
assignment_1/task_2_2/: task_2_2.sh
assignment_1/task_2_3/: task_2_3.sh
assignment_1/task_2_4/: task_2_4.sh
assignment_1/task_3_1/: task_3_1.sh
assignment_1/task_3_2/: task_3_2.sh
assignment_2/imrt_teleop/: package.xml
assignment_2/imrt_teleop/launch/: imrt_teleop_launch.launch
assignment_2/imrt_teleop/nodes/: imrt_teleop
assignment_2/imrt_virtual_joy/: CMakeLists.txt  package.xml  setup.py
assignment_2/imrt_virtual_joy/launch/: joy.launch
assignment_2/imrt_virtual_joy/nodes/: virtual_gamepad
assignment_2/task2_bringup/: CMakeLists.txt  package.xml
assignment_2/task2_bringup/launch/: teleop_husky.launch  teleop_turtle.launch
assignment_2/task2_simulator/: CMakeLists.txt  package.xml
assignment_2/task2_simulator/launch/: spawn_husky.launch  spawn_thorvald.launch  world_bringup.launch
assignment_3/a3t2_bringup/: CMakeLists.txt  package.xml
assignment_3/a3t2_bringup/launch/: system_bringup.launch
assignment_3/imrt_speech/: CMakeLists.txt  package.xml
assignment_3/imrt_speech/config/: phrases.yaml
assignment_3/imrt_teleop/: CMakeLists.txt
assignment_5/imrt_control/: CMakeLists.txt  package.xml
assignment_5/imrt_description/: CMakeLists.txt  package.xml
assignment_5/imrt_gazebo/: CMakeLists.txt  package.xml
assignment_6/imrt_maze_nav/: CMakeLists.txt  package.xml
(+23 files in other folders)
