<?xml version="1.0"?>
<package format="2">
  <name>task2_simulator</name>
  <version>0.0.1</version>
  <description>Simulation for TEL211 assignment 2</description>

  <maintainer email="lars.grimstad@nmbu.no">Lars Grimstad</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>husky_control</exec_depend>
  <exec_depend>husky_description</exec_depend>


  <export>
  </export>
</package>
